--- a/Allfiles/Mod10/Labfiles/01_ShirtStore_begin/ShirtStoreWebsite/ShirtStoreWebsite.csproj
+++ b/Allfiles/Mod10/Labfiles/01_ShirtStore_begin/ShirtStoreWebsite/ShirtStoreWebsite.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0-dev-00024" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.production.development.json">
+      <DependentUpon>appsettings.production.json</DependentUpon>
+    </Content>
+  </ItemGroup>
+
 </Project>
